updated artworks resource, new controller
